--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ cache/8043330b7854d7a44eb551f9c8dc5e10a6f1ca5a.json
 cache/d8c740edf2a32336a46b1f82b14b2d11c234e7eb.json
 cache/f4bb9adad9620b58051626e2aab3b29aef0d9e03.json
 cache/f9caf091b491b5949876d50fa50ea664ee4a3b62.json
+data/pbf_test/geofabrik_basse-normandie-latest.osm.pbf
+data/pbf_test/geofabrik_basse-normandie-latest.osm.pbf.mapdb
+data/pbf_test/geofabrik_basse-normandie-latest.osm.pbf.mapdb.p
+data/pbf/geofabrik_basse-normandie-latest.osm_01.pbf
+data/pbf/geofabrik_basse-normandie-latest.osm_01.pbf.mapdb
+data/pbf/geofabrik_basse-normandie-latest.osm_01.pbf.mapdb.p
